[tool.poetry]
name = "pdf-rag-system"
version = "0.1.0"
description = "Sistema avanzato di Retrieval Augmented Generation per l'analisi di documenti PDF"
authors = ["Cosimo Eugenio Bortone <mbortone@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.3"
python-dotenv = "^1.1.0"
streamlit = "^1.44.1"
langchain = "^0.3.23"
langchain-community = "^0.3.21"
langchain-core = "^0.3.51"
langchain-text-splitters = "^0.3.8"
langchain-openai = "^0.3.12"
pypdf = "^5.4.0"
faiss-cpu = "^1.10.0"
tiktoken = "^0.9.0"
pydantic = "^2.11.3"
watchdog = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "streamlit_app.app:main"
cli = "cli:main"
